# UTD

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  cpp-build-test.yml  cpp-lint.yml
UTD/: Array.h  CMakeLists.txt  CMakePresets.json  UTD.cpp  UTD.h  build.sh  build_benchmark_max.sh  build_debug.sh
UTD/benchmarks/: README.md  helper.cpp  helper.h  string.cpp  string24.cpp  vector.cpp
UTD/src/data-structures/: Array.h  String.cpp  String.h  String32.cpp  String32.h  Vector.h  allocator.h  array.h  array.tpp  basic_string.cpp  basic_string.h  string.cpp  string.h  string24.cpp  string24.h  string32.cpp  string32.h  unordered_set.h  unordered_set.tpp  unordered_set_m.h  unordered_set_m.tpp  vector.h  vector.tpp
UTD/src/data-structures/Vector/: Vector.h
UTD/src/data-structures/string/: String.cpp  String.h  Test.h
UTD/src/demo/: Demo.cpp  Demo.h  demo.cpp  demo.h  main.cpp
UTD/src/smart-pointers/: unique_ptr.h  unique_ptr.tpp
UTD/src/utils/: Math.cpp  Math.h  README.md  Timer.cpp  hash.cpp  hash.h  math.cpp  math.h  timer.cpp  timer.h
UTD/tests/: main.cpp
UTD/tests/data-structures/: array_test.cpp  string24_test.cpp  string32_test.cpp  unordered_set_m_test.cpp  unordered_set_test.cpp  vector_test.cpp
UTD/tests/utils/: hash_test.cpp
UTD/tests/vector_tests/: vector_tests.cpp
UTD/utils/: README.md  timer.h
